# tree-sitter-tsqx

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  example-file.tsqx  go.mod  grammar.js  highlights.scm  package-lock.json  package.json  pyproject.toml  setup.py  test-file.tsqx  tree-sitter.json
bindings/c/: tree-sitter-tsqx.pc.in
bindings/c/tree_sitter/: tree-sitter-tsqx.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_tsqx/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterTsqxTests/: TreeSitterTsqxTests.swift
integrations/nvim/: highlights.scm  rainbow-delimiters.scm
src/: grammar.json  node-types.json  parser.c
