[package]
name = "tree-sitter-tsqx"
description = "A parser for cjquines/tsqx, a wrapper around asymptote."
version = "0.1.0"
authors = ["extouchtriangle"]
license = "GPL"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "tsqx"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/extouchtriangle/tree-sitter-tsqx"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.3"
