[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-tsqx"
description = "A parser for cjquines/tsqx, a wrapper around asymptote."
version = "0.1.0"
keywords = ["incremental", "parsing", "tree-sitter", "tsqx"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "extouchtriangle" }]
requires-python = ">=3.10"
license.text = "GPL"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/extouchtriangle/tree-sitter-tsqx"

[project.optional-dependencies]
core = ["tree-sitter~=0.24"]

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build"
